--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
           maximum-scale=1.0,
           minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>SearchBar</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<label data-qa="big" class="big-container">
+  <input class="search-bar big-search-bar"
+         type="search"
+         name="search"
+         placeholder="Try &quot;Los Angeles&quot;"
+         data-qa="keypress">
+</label>
+
+<label data-qa="small" class="small-container" >
+  <input class="search-bar small-search-bar"
+         type="search"
+         name="search"
+         placeholder="Try &quot;Los Angeles&quot;">
+</label>
 
 <script type="text/javascript" src="./main.js"></script>
 </body>
